docs: write the design principles into AGENTS.md
Five principles, placed ahead of the four mechanical rules because the rules are
checkable and these are judgment, and judgment decides first.

- The whole stays coherent. Where a capability belongs in the existing design is
  the first question, not how to make it run. Never lower the standard to finish
  a task.
- Fix causes, never patch the edge. Swallowed exceptions, failures turned into
  empty results, flags that route around a defect. The delete path is named as
  the live example: an unreadable delete file yields an empty plan today, so
  deleted rows come back silently.
- No stovepipes. One class of problem, one solution.
- Refactor when the design needs it, and never weigh the effort. Exactly three
  reasons justify deferring: a decision is not made, a dependency does not
  exist, a fact is not known. "It is a lot of work" and "that is refactoring,
  not this task" are not among them. That second one is a reason I have used in
  this migration, and it does not hold.
- Removing is design work and it is never silent. Subtraction is what keeps the
  architecture simple, but no deletion happens on the agent's own judgment:
  state what goes, the evidence it is unused, and what breaks if that evidence
  is wrong, then wait for a person. "No references in this repository" is
  evidence, not proof — reflection, service loading, user code outside the tree
  and the cloud jobs that pin this artifact all depend on things that grep as
  dead. IntConverter and MilvusSparkNativeImportWriter were deleted earlier in
  this branch on exactly that evidence and without asking.

One boundary is stated with them: a documented interim state is not a patch. It
is legitimate when it is written down, has a named end condition and someone is
holding it. `compat.offline` and `apps.legacy` are empty for that reason.